@@ -4,7 +4,7 @@ optimize=1
 [bdist_rpm]
 provides = panda-autopyfactory
 
-release = 3
+release = 4
 
 packager = Panda Team <hn-atlas-panda-pathena@cern.ch>
 #requires = panda-userinterface >= 1.0.4, condor >= 7.9.4, python-simplejson, python-pycurl
